yle-dl - download videos from Yle servers
Copyright 2009-2022 Antti Ajanki
Distributed under the GPL v3 or later

<unreleased>

- Full series download on Swedish language arenan.yle.fi fixed

Version 20221111

- Fixed some geo-blocking related failures

Version 20221015

- Support new live radio URLs containing /podcastit/
- --restrict-filename-no-spaces avoids spaces in generated filenames
- --restrict-filename-no-specials generates Windows-compatible filenames (alias for --vfat)
- --output-na-placeholder: Placeholder value for unavailable fields in filenames
- --xattrs: Write metadata to the video file's extended attributes
- Correct series and episode titles in cases where the series title was missing

Version 20220830

- Fixed a crash if a title is missing
- "--latestepisode" was sometimes selecting a wrong episode
- Improved retry on very long and slow downloads
- Include description as metadata in audio output files

Version 20220704

- Fixed series pages after changes in Areena

Version 20220610

- Downloading was failing sometimes because of a too small probe size

Version 20220531

- Switched back to HLS stream. MPEG-DASH resulted in slow and
  sometimes incomplete downloads. Expect again (harmless) warnings
  about subtitles.

Version 20220518

- Improved subtitle support by preferring MPEG-DASH streams over HLS
- Support collection pages, that is pages which have the title "Suositellut"

Version 20220425

- Compatible with the recent changes in Areena
- Follow redirects when downloading certain audio episodes
- Support the / character in --output-template
- Postprocessing scripts are working again

Version 20220213

- Downloading live streams works again
- Known bug: subtitles are not displayed on live stream
- Make it possible to download audio streams using ffmpeg

Version 20211213

- Some programs failed to download on the ffmpeg backend
- Remove an extra colon at the end of live stream filenames

Version 20211207
