@@ -20,7 +20,7 @@ from utils import fetch_metadata
 
 def test_uutiset_main_media_metadata():
     # This page has a video embedded as "mainMedia"
-    metadata = fetch_metadata('https://yle.fi/uutiset/3-11822823')
+    metadata = fetch_metadata('https://yle.fi/a/3-11822823')
 
     assert len(metadata) == 1
     assert metadata[0]['webpage'] == 'https://areena.yle.fi/1-50653021'
@@ -42,7 +42,7 @@ def test_uutiset_main_media_metadata():
 
 def test_uutiset_headline_metadata():
     # This page has a video embedded as "headline.video"
-    metadata = fetch_metadata('https://yle.fi/uutiset/3-12328632')
+    metadata = fetch_metadata('https://yle.fi/a/3-12328632')
 
     assert len(metadata) == 1
     assert metadata[0]['webpage'] == 'https://areena.yle.fi/1-61842917'
@@ -60,7 +60,7 @@ def test_uutiset_headline_metadata():
 
 def test_uutiset_inline_audio_block_metadata():
     # This page has an inline AudioBlock
-    metadata = fetch_metadata('https://yle.fi/uutiset/3-11843834')
+    metadata = fetch_metadata('https://yle.fi/a/3-11843834')
 
     assert len(metadata) == 1
     assert metadata[0]['webpage'] == 'https://areena.yle.fi/1-50762351'
@@ -74,3 +74,37 @@ def test_uutiset_inline_audio_block_metadata():
     flavors = metadata[0]['flavors']
     assert len(flavors) >= 1
     assert all(f.get('media_type') == 'audio' for f in flavors)
+
+
+def test_uutiset_svenska():
+    metadata = fetch_metadata('https://svenska.yle.fi/a/7-10023932')
+
+    assert len(metadata) >= 1
+    assert metadata[0]['webpage'] == 'https://areena.yle.fi/1-64379365'
+    assert metadata[0]['title'].startswith('Yle Nyheter')
+    assert metadata[0]['duration_seconds'] == 73
+    assert metadata[0]['region'] == 'World'
+    assert metadata[0]['publish_timestamp'] == '2022-12-05T12:28:13+02:00'
+    assert 'expired_timestamp' not in metadata[0]
+
+    flavors = metadata[0]['flavors']
+    assert len(flavors) >= 1
+    assert all(f.get('media_type') == 'video' for f in flavors)
+
+
+def test_uutiset_metadata_old_address():
+    # Before Nov 2022, news articles were published at /uutiset/
+    # instead of /a/
+    metadata = fetch_metadata('https://yle.fi/uutiset/74-20006891')
+
+    assert len(metadata) == 1
+    assert metadata[0]['webpage'] == 'https://areena.yle.fi/1-64358035'
+    assert metadata[0]['title'].startswith('Puoli seitsemän: Neljä pukeutumisvinkkiä talvipyöräilyyn')
+    assert metadata[0]['duration_seconds'] == 74
+    assert metadata[0]['region'] == 'World'
+    assert metadata[0]['publish_timestamp'] == '2022-12-02T10:09:44+02:00'
+    assert 'expired_timestamp' not in metadata[0]
+
+    flavors = metadata[0]['flavors']
+    assert len(flavors) >= 1
+    assert all(f.get('media_type') == 'video' for f in flavors)
