@@ -5,6 +5,7 @@ Distributed under the GPL v3 or later
 <unreleased>
 
 - Full series download on Swedish language arenan.yle.fi fixed
+- Downloading news clips from yle.fi (in addition to yle.fi/uutiset/)
 
 Version 20221111
 
